fix sticky menu tab on mobile

--- a/src/assets/less/menu.less
+++ b/src/assets/less/menu.less
@@ -355,10 +355,10 @@
       border: 1px solid #b4b2c7;
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
       grid-template-columns: repeat(12, 1fr);
-  position: sticky;
+      position: sticky;
       column-gap: clamp(0.5rem, 2vw, 1.5rem);
       row-gap: 0.5rem;
-      top: clamp(5rem, 8vw, 6.5rem); /* Adjust the clamp values if necessary */
+      top: clamp(8.5rem, 8vw, 6.5rem); /* Adjust the clamp values if necessary */
       z-index: 100;
    
     
